--- a/src/osh_info/Makefile.am
+++ b/src/osh_info/Makefile.am
@@ -2,7 +2,7 @@
 
 bin_PROGRAMS           = osh_info
 
-osh_info_SOURCES       = osh_info.c ../info.c
+osh_info_SOURCES       = osh_info.c ../api/info.c
 osh_info_CPPFLAGS      = -I$(top_srcdir)/src/api \
 				-I$(top_srcdir)/include
 osh_info_LDFLAGS       =
