--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
 # For license: see LICENSE file at top-level
 
-SUBDIRS =	shmemu shmemc shmemt shcoll api
+SUBDIRS =	shmemu shmemc shmemt shcoll api osh_info
