Regularize the environment parsing and separate out init of other values

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -10,6 +10,7 @@ LIBSHMEMC_SOURCES         = \
 				contexts.c \
 				globalexit.c \
 				env.c \
+				heaps.c \
 				init.c \
 				nodename.c \
 				state.c \
