Accidentally was building internal shcoll component unconditionally.  Add check for this

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,7 @@
 # For license: see LICENSE file at top-level
 
-SUBDIRS =	shmemu shmemc shmemt shcoll api osh_info
+SUBDIRS    =	shmemu shmemc shmemt api osh_info
+
+if HAVE_SHCOLL_INTERNAL
+SUBDIRS   +=	shcoll
+endif # HAVE_SHCOLL_INTERNAL
