--- a/pkgconfig/osss-ucx.pc.in
+++ b/pkgconfig/osss-ucx.pc.in
@@ -7,6 +7,8 @@ URL: @PACKAGE_URL@
 #
 prefix=@prefix@
 exec_prefix=@exec_prefix@
+includedir=@includedir@
+libdir=@libdir@
 #
 Libs: -Wl,-rpath,@libdir@ -L@libdir@ -lshmem -lshmemc-ucx -lshmemu -lshmemt -lshmem-amo @SHCOLL_LIBS@ @PMIX_LIBS@ @UCX_LIBS@ -lm
 Cflags: -I@includedir@
