Move internal progress support from API directory to utilities

--- a/src/shmemu/Makefile.am
+++ b/src/shmemu/Makefile.am
@@ -11,6 +11,7 @@ LIBSHMEMU_SOURCES         =	init.c \
 				memcheck.c \
 				parse_csv.c \
 				plural.c \
+				progress.c \
 				timer.c \
 				unitparse.c
 
