--- a/man/man1/oshrun.1.in
+++ b/man/man1/oshrun.1.in
@@ -52,7 +52,8 @@ print library version at start-up
 .IP "SHMEM_INFO, SMA_INFO (bool: default false)"
 print information about supported environment variables
 .IP "SHMEM_SYMMETRIC_SIZE, SMA_SYMMETRIC_SIZE (number: default @SHMEM_DEFAULT_HEAP_SIZE@)"
-set the size of the symmetric heap.  Can use K,M,G,T units (2^10).
+set the size of the symmetric heap, in bytes.  Can add K,M,G,T units
+(2^10).
 .IP "SHMEM_DEBUG, SMA_DEBUG (bool: default false)"
 enable run debugging/sanity checking (if configured).
 .RE
