Bit more info after configure

--- a/configure.ac
+++ b/configure.ac
@@ -211,6 +211,11 @@ echo
 echo "Summary"
 echo "-------"
 echo
+echo "         C Compiler: \"$CC\""
+echo "            C Flags: \"$CFLAGS\""
+echo "       C++ Compiler: \"$CXX\""
+echo "          C++ Flags: \"$XXCFLAGS\""
+echo
 echo "            Logging: $enable_logging"
 echo "          Debugging: $enable_debug"
 echo "         Extensions: $enable_experimental"
